--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id "io.freefair.lombok" version "6.5.0.3"
+    id 'io.qameta.allure' version '2.9.6'
 }
 
 group 'ru.netology'
@@ -15,6 +16,13 @@ repositories {
     mavenCentral()
 }
 
+allure {
+    version = '2.16.1'
+    useJUnit5 {
+        version = '2.16.1'
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.0'
@@ -24,6 +32,7 @@ dependencies {
     testImplementation 'com.codeborne:selenide:5.19.0'
     implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.1'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
 }
 
 test {
